content/consul/v2.0.x/content/docs/manage/rate-limit/global.mdx
---
layout: docs
page_title: Set a global limit on traffic rates
description: Use global rate limits to prevent excessive rates of requests to Consul servers.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-03-31T20:45:16.000Z
last_modified: 2026-03-31T20:45:16.000Z
# END AUTO GENERATED METADATA
---

# Set a global limit on traffic rates

This topic describes how to configure rate limits for RPC and gRPC traffic to the Consul server.

## Introduction

Rate limits apply to each Consul server separately and limit the number of read requests or write requests to the server on the RPC and internal gRPC endpoints.

Because all requests coming to a Consul server eventually perform an RPC or an internal gRPC request, global rate limits apply to Consul's user interfaces, such as the HTTP API interface, the CLI, and the external gRPC endpoint for services in the service mesh.

Refer to [Initialize Rate Limit Settings](/consul/docs/agent/limits/usage/init-rate-limits) for additional information about right-sizing your gRPC request configurations.

## Set a global rate limit for a Consul server

Configure the following settings in your Consul server configuration to limit the RPC and gRPC traffic rates.

- Set the rate limiter [`mode`](/consul/docs/reference/agent/configuration-file/general#mode-1)
- Set the [`read_rate`](/consul/docs/reference/agent/configuration-file/general#read_rate)
- Set the [`write_rate`](/consul/docs/reference/agent/configuration-file/general#write_rate)

In the following example, the Consul server is configured to prevent more than `500` read and `200` write RPC calls:

<CodeTabs heading="Consul server agent">

```hcl
limits = {
    rate_limit = {
        mode = "enforcing"
        read_rate = 500
        write_rate = 200
    }
}
```

```json
{
    "limits" : {
        "rate_limit" : {
            "mode" : "enforcing",
            "read_rate" : 500,
            "write_rate" : 200
        }
    }
}

```

</CodeTabs>

## Set a cluster-wide rate limit using a config entry

<EnterpriseAlert>The cluster-wide rate limit config entry is available in Consul Enterprise only.</EnterpriseAlert>

The agent configuration described in the previous section applies limits per server, which means you must update and reload the configuration on every server node individually. During an active incident, this process is too slow.

The [`rate-limit` configuration entry](/consul/docs/reference/config-entry/rate-limit) provides a cluster-wide alternative. A single write to the leader propagates to all servers in 50–100ms, making it the recommended approach for emergency throttling. The limit applies to each server individually — a `ReadRate` of `500` allows up to 500 read requests per second on each server, not 500 read requests shared across all servers.

In the following example, a single config entry limits read and write operations across the entire cluster and overrides per-server settings.

```hcl
Kind = "rate-limit"
Name = "global"

Config {
  ReadRate  = 500
  WriteRate = 200
  Priority  = true
}
```

## Precedence

The effective rate limit depends on whether per-server configuration and the global config entry exist, and the value of `Config.Priority`.

| Per-server config | Global config entry        | Effective limit     |
| ----------------- | -------------------------- | ------------------- |
| Configured        | None or `Priority = false` | Per-server config   |
| Configured        | `Priority = true`          | Global config entry |
| None              | None or `Priority = false` | None                |
| None              | `Priority = true`          | Global config entry |

Refer to [Rate Limit configuration entry reference](/consul/docs/reference/config-entry/rate-limit) for the full list of available fields.

## Monitor request rate traffic

You should continue to monitor request traffic to ensure that request rates remain within the threshold you defined. When the agent configuration rate limiter actively throttles requests, Consul emits the `consul.rpc.rate_limit.exceeded` metric with the label `limit_type: "global/read"` or `limit_type: "global.configentry/read"` for throttled read requests. Use this label to distinguish agent configuration throttling from config entry throttling.

Refer to [Monitor traffic rate limit data](/consul/docs/manage/rate-limit/monitor) for instructions about checking metrics and log entries, as well as troubleshooting information.

## Disable request rate limits

Set the [`limits.request_limits.mode`](/consul/docs/reference/agent/configuration-file/general#mode-1) to `disabled` to allow services to exceed the specified read and write requests limits, even limits specified in the [control plane request limits configuration entry](/consul/docs/reference/config-entry/control-plane-request-limit). Note that any other mode specified in the agent configuration only applies to global traffic rate limits.
